--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@
             <!-- Grade de projetos -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8" id="projects-grid">
                 <!-- Projeto 1 -->
-                <div class="project-item rounded-lg overflow-hidden shadow-lg cursor-pointer" data-aos="fade-up" data-category="residencial" onclick="openModal('Casa Moderna', 'Projeto residencial com linhas contemporâneas e amplos espaços integrados.', 'render casa 01.jpg')">
-                    <img src="render casa 01.jpg">
+                <div class="project-item rounded-lg overflow-hidden shadow-lg cursor-pointer" data-aos="fade-up" data-category="residencial" onclick="openModal('Casa Moderna', 'Projeto residencial com linhas contemporâneas e amplos espaços integrados.', 'casa Revit.jpg')">
+                    <img src="Casa Revit.jpg">
                     <div class="project-overlay">
                         <h3 class="text-white text-2xl font-bold mb-2">Casa Moderna</h3>
                         <p class="text-gray-200 mb-4">Projeto Residencial</p>
@@ -412,6 +412,19 @@
                         </span>
                     </div>
                 </div>
+
+                   <div class="project-item rounded-lg overflow-hidden shadow-lg cursor-pointer" data-aos="fade-up" data-category="residencial" onclick="openModal('Casa Moderna', 'Projeto residencial com linhas contemporâneas e amplos espaços integrados.', 'facahda 06.png')">
+                    <img src="facahda 06.png">
+                    <div class="project-overlay">
+                        <h3 class="text-white text-2xl font-bold mb-2">Casa Moderna</h3>
+                        <p class="text-gray-200 mb-4">Projeto Residencial</p>
+                        <span class="text-orange-500">
+                            <i class="fas fa-plus-circle text-2xl"></i>
+                        </span>
+                    </div>
+                </div>
+
+                
 
                 <!-- Projeto 2 -->
                 <div class="project-item rounded-lg overflow-hidden shadow-lg cursor-pointer" data-aos="fade-up" data-aos-delay="100" data-category="comercial" onclick="openModal('Centro Empresarial', 'Edifício comercial com conceito open space e certificação de sustentabilidade.', 'edificio.png')">
@@ -430,6 +443,28 @@
                     <img src="loft01.png" alt="Design de Interiores" class="w-full h-72 object-cover">
                     <div class="project-overlay">
                         <h3 class="text-white text-2xl font-bold mb-2">Loft Contemporâneo</h3>
+                        <p class="text-gray-200 mb-4">Design de Interiores</p>
+                        <span class="text-orange-500">
+                            <i class="fas fa-plus-circle text-2xl"></i>
+                        </span>
+                    </div>
+                </div>
+
+                   <div class="project-item rounded-lg overflow-hidden shadow-lg cursor-pointer" data-aos="fade-up" data-aos-delay="200" data-category="interiores" onclick="openModal('Loft Contemporâneo', 'Design de interiores para loft urbano com mix de texturas e materiais naturais.', 'loft2.png')">
+                    <img src="loft2.png" alt="Design de Interiores" class="w-full h-72 object-cover">
+                    <div class="project-overlay">
+                        <h3 class="text-white text-2xl font-bold mb-2">Sala/Cozinha Integrada</h3>
+                        <p class="text-gray-200 mb-4">Design de Interiores</p>
+                        <span class="text-orange-500">
+                            <i class="fas fa-plus-circle text-2xl"></i>
+                        </span>
+                    </div>
+                </div>
+
+                     <div class="project-item rounded-lg overflow-hidden shadow-lg cursor-pointer" data-aos="fade-up" data-aos-delay="200" data-category="interiores" onclick="openModal('Loft Contemporâneo', 'Design de interiores para loft urbano com mix de texturas e materiais naturais.', '02.jpg')">
+                    <img src="02.jpg" alt="Design de Interiores" class="w-full h-72 object-cover">
+                    <div class="project-overlay">
+                        <h3 class="text-white text-2xl font-bold mb-2">Loja</h3>
                         <p class="text-gray-200 mb-4">Design de Interiores</p>
                         <span class="text-orange-500">
                             <i class="fas fa-plus-circle text-2xl"></i>
@@ -472,6 +507,9 @@
                         </span>
                     </div>
                 </div>
+
+
+                 
             </div>
         </div>
     </section>
